[tool.poetry]
name = "swarm-customer-service"
version = "0.1.0"
description = ""
authors = ["Alejandro Latorre Rojas <alej669@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
openai = "^1.52.0"
qdrant-client = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
